name: direct-xml-sax
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://www.dankna.com/software/
bug-reports: http://www.dankna.com/issues/create/
category: Database
synopsis: Native Haskell implementation of a SAX-like API for parsing XML.
description:
  This package is a native Haskell implementation of a SAX-like API for parsing XML.
  It has minimal external dependencies, unlike other libraries.
 
Library
  exposed-modules: Text.XML.Direct.SAX
  build-depends: base >= 4.1 && < 5,
                 bytestring >= 0.9.1.10 && < 1,
                 utf8-string >= 0.3.5,
                 xml-types >= 0.1.2 && < 1
